# rhapsody

./: .gitignore  README.md  README_POET.md  README_PRETRAIN.md  accelerate_tpu_config.yaml  build_project.py  config.yaml  diagnose_colab.py  eval_poet.py  eval_pretrain.py  finetune_poet.py  poet_demo.py  pretokenize.py  pyproject.toml  requirements.txt  test_env.py  test_kv_cache.py  test_loss.py  test_training.py
rhapsody/: __init__.py  abc_utils.py  data.py  inference.py  lm.py  model.py  train.py  train_lm.py  train_tpu.py
