[project]
name = "rhapsody"
version = "0.1.0"
description = "Small audio-language model training code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "protobuf>=3.20.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.40.0",
    "zstandard>=0.18.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
logging = [
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
]

[project.scripts]
rhapsody-train = "rhapsody.train:train"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["rhapsody*"]}}
